ft/src/tui/snapshots/ft__tui__tests__notes_move_new_target_filename_prompt_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 4703
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  c     create note (blank)                                                   │
│  C     create note from template                                             │
│  t     open to┌ move · new target · filename · proj.md → proj┐               │
│  p     periodi│▏ filename: Q3-█                              │               │
│  ?     show th│                                              │               │
│  Esc   close o│ Enter next   Esc back to folder   Ctrl+W dele│               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
