ft/src/tui/snapshots/ft__tui__tests__notes_move_new_target_template_picker_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 4024
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes  │  4 Timeblocks                            
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ move · new target · template ────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││type to search…                             ││               │
│  c     create │└────────────────────────────────────────────┘│               │
│  C     create │┌ recent · type to search ───────────────────┐│               │
│  t     open to││▶ (no template / blank)                     ││               │
│  p     periodi││  new.md                                    ││               │
│  ?     show th││  proj.md                                   ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │                                              │               │
│               │ Enter use template   Esc back to target picke│               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
