ft/src/tui/snapshots/ft__tui__tests__notes_move_target_picker_80x24.snap
---
source: ft/src/tui/tests.rs
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal                
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ move · 3/4 target · 1 from project.md ───────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││archive│                                    ││               │
│  c     create │└────────────────────────────────────────────┘│               │
│  C     create │┌ results ───────────────────────────────────┐│               │
│  t     open to││▶ archive.md                                ││               │
│  p     periodi││                                            ││               │
│  ?     show th││                                            ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │ Enter use target   Ctrl+N new target   Esc ba│               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
