ft/src/tui/snapshots/ft__tui__tests__notes_open_picker_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 2291
expression: frame
---
  1 Welcome  │  2 Tasks  │  3 Notes  │  4 Timeblocks                            
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ open · pick file / heading ──────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││project│                                    ││               │
│  c     create │└────────────────────────────────────────────┘│               │
│  C     create │┌ results ───────────────────────────────────┐│               │
│  t     open to││▶ project.md                                ││               │
│  p     periodi││                                            ││               │
│  ?     show th││                                            ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │ Enter open in $EDITOR   Ctrl+O open in Obsidi│               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
