ft/src/tui/snapshots/ft__tui__tests__notes_open_picker_recents_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 4082
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks                              
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│               ┌ open · pick file / heading ──────────────────┐               │
│  o     open fi│┌ find ──────────────────────────────────────┐│               │
│  m     move se││type to search…                             ││               │
│  c     create │└────────────────────────────────────────────┘│               │
│  C     create │┌ recent · type to search ───────────────────┐│               │
│  t     open to││▶ project.md                                ││               │
│  p     periodi││  notes/daily.md                            ││               │
│  ?     show th││  inbox.md                                  ││               │
│  Esc   close o││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               ││                                            ││               │
│               │└────────────────────────────────────────────┘│               │
│               │ Enter open in $EDITOR   Ctrl+O open in Obsidi│               │
│               │                                              │               │
│               └──────────────────────────────────────────────┘               │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
