ft/src/tui/snapshots/ft__tui__tests__notes_periodic_leader_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 5372
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks                              
┌ notes ───────────────────────────────────────────────────────────────────────┐
│                                                                              │
│  Notes — Obsidian-flavoured editing                                          │
│                                                                              │
│  o     open file / heading                                                   │
│  m     move section(s) to another file                                       │
│  c     create note (bl┌ periodic note · pick a period┐                       │
│  C     create note fro│                              │                       │
│  t     open today's da│  d     daily                 │                       │
│  p     periodic note ·│  w     weekly                │                       │
│  ?     show this help │  m     monthly               │                       │
│  Esc   close overlay  │  q     quarterly             │                       │
│                       │  y     yearly                │                       │
│                       │  Esc   cancel                │                       │
│                       │                              │                       │
│                       └──────────────────────────────┘                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Notes           not yet refreshed      mode: normal
