ft/src/tui/snapshots/ft__tui__tests__quickline_valid_preview_80x24.snap
---
source: ft/src/tui/tests.rs
assertion_line: 2594
expression: frame
---
  1 Graph  │  2 Tasks  │  3 Notes  │  4 Timeblocks  │  5 Journal  │  6 Review   
┌ sidebar ─────────────┐┌ query ───────────────────────────────────────────────┐
│                      ││status in {Open, InProgress} and due < 2026-05-18     │
│ Sun 10 May           │└──────────────────────────────────────────────────────┘
│ 14:32:05             │┌ new task ────────────────────────────────────────────┐
│                      ││buy milk due:tomorrow pri:high #grocery│              │
│ ── views ──          │└──────────────────────────────────────────────────────┘
│ ▶ Search             │  → - [ ] buy milk #grocery ⏫  📅  2026-05-11   → Daily/2
│                      │┌ tasks ───────────────────────────────────────────────┐
│                      ││                   no matching tasks                  │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
│                      ││                                                      │
└──────────────────────┘└──────────────────────────────────────────────────────┘
 vault: test-vault  ·  tab: Tasks          refreshed [HH:MM:SS]      mode: normal
